--- a/five00dp/res/layout/sliding_menu_fragment.xml
+++ b/five00dp/res/layout/sliding_menu_fragment.xml
@@ -4,14 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2D2D2D" >
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
+    
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/listViewMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
