--- a/five00dp/res/layout/fragment_photo_detail.xml
+++ b/five00dp/res/layout/fragment_photo_detail.xml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF4F4F4" >
+    android:background="#FFF4F4F4"
+    android:orientation="vertical" >
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_height="0dp"
+        android:layout_weight="1" >
     </ListView>
 
     <LinearLayout
         android:id="@+id/userActionBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/ab_solid_five00dp"
-        android:visibility="gone">
+        android:layout_height="@dimen/abs__action_bar_default_height"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        android:visibility="gone" 
+        android:background="@drawable/abs__ab_bottom_transparent_light_holo">
 
         <ImageButton
             android:id="@+id/btnPhotoLike"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@android:drawable/ic_menu_add" 
-            android:onClick=""/>
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:background="?selectableItemBackground"
+            android:minWidth="@dimen/abs__action_button_min_width"
+            android:onClick=""
+            android:src="@android:drawable/ic_menu_add" />
 
         <ImageButton
             android:id="@+id/btnPhotoFav"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:background="?selectableItemBackground"
+            android:minWidth="@dimen/abs__action_button_min_width"
             android:src="@drawable/ic_heart" />
-        
-       <Button
+
+        <EditText
             android:id="@+id/btnPhotoFav"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Comment" />
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:hint="@string/comment" 
+            android:editable="false"/>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
