--- a/five00dp/res/layout/dialog_photo_view.xml
+++ b/five00dp/res/layout/dialog_photo_view.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent" 
-    android:minWidth="1000dp"  
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#80000000"
     android:minHeight="1000dp"
-    android:background="#80000000"> 
+    android:minWidth="1000dp" >
 
+
+    
     <ImageView
         android:id="@+id/imageViewDialog"
         android:layout_width="match_parent"
