--- a/five00dp/res/layout/fragment_photo_detail.xml
+++ b/five00dp/res/layout/fragment_photo_detail.xml
@@ -29,7 +29,7 @@
             android:background="?selectableItemBackground"
             android:minWidth="@dimen/abs__action_button_min_width"
             android:onClick=""
-            android:src="@android:drawable/ic_menu_add" />
+            android:src="@drawable/ic_action_like" />
 
         <ImageButton
             android:id="@+id/btnPhotoFav"
@@ -37,15 +37,16 @@
             android:layout_height="fill_parent"
             android:background="?selectableItemBackground"
             android:minWidth="@dimen/abs__action_button_min_width"
-            android:src="@drawable/ic_heart" />
+            android:src="@drawable/ic_action_fav" />
 
         <EditText
-            android:id="@+id/btnPhotoFav"
+            android:id="@+id/etPhotoComment"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:hint="@string/comment" 
-            android:editable="false"/>
+            android:editable="false"
+            android:focusable="false"/>
     </LinearLayout>
 
 </LinearLayout>
