--- a/five00dp/res/layout/header_photo_detail.xml
+++ b/five00dp/res/layout/header_photo_detail.xml
@@ -84,19 +84,17 @@
                 android:layout_marginBottom="4dp"
                 android:drawableLeft="@drawable/ic_view"
                 android:gravity="center_vertical"
-                android:text="100"
                 android:textColor="#9C9A9B"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <TextSwitcher
                 android:id="@+id/votesCountView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:drawableLeft="@drawable/ic_vote"
                 android:gravity="center_vertical"
-                android:text="100"
                 android:textColor="#9C9A9B"
                 android:textSize="12sp"
                 android:textStyle="bold" />
@@ -107,7 +105,6 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_fav"
                 android:gravity="center_vertical"
-                android:text="100"
                 android:textColor="#9C9A9B"
                 android:textSize="12sp"
                 android:textStyle="bold" />
